Added new files and deleted one html file

--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
         <div class="navigation">
             <ul>
                 <li>
-                    <a href="homepage.html">Home</a>
+                    <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="form.html">Your Akan Name</a>
+                    <a class= "home" href="form.html">Your Akan Name</a>
                 </li>
-            </ul>
+            </ul>   
         </div>
     </header>
+    <div>
+        <h3 id="home">What the Application does</h3>
+        <p>
+            Hi there! Thank you for being here. This application works through taking your birthday input, calculating the day of the week that you were born.
+            Depending on you gender input, and date of birth, the application will output your Akan name. 
+        </p>
+        <img src="afrikaan.jpg">
+    </div>
     <div class="name">
         <p>
         A name is an element of human experience. Even though names are purely experiential, knowing your Akan name may help you understand the philosophy and worldview of the society.
