--- a/index.html
+++ b/index.html
@@ -20,21 +20,16 @@
             </ul>   
         </div>
     </header>
-    <div>
-        <h3 id="home">What the Application does</h3>
+    <div class="info">
+        <h4 id="home" align="center"></h4>
         <p>
             Hi there! Thank you for being here. This application works through taking your birthday input, calculating the day of the week that you were born.
-            Depending on you gender input, and date of birth, the application will output your Akan name. 
+            Depending on you gender input, and date of birth, the application will output your Akan name. A name is an element of human experience. Even though names are purely experiential, knowing your Akan name may help you understand the philosophy and worldview of the society.
+            Akan personal name system and practice is a marker of people's belief,
+            ideology, religion, culture, philosophy and thought. <a href="https://en.wikipedia.org/wiki/Akan_names">Learn More</a>
+            <br>
+            <img class="image" src="">
         </p>
-        <img src="afrikaan.jpg">
-    </div>
-    <div class="name">
-        <p>
-        A name is an element of human experience. Even though names are purely experiential, knowing your Akan name may help you understand the philosophy and worldview of the society.
-        Akan personal name system and practice is a marker of people's belief,
-        ideology, religion, culture, philosophy and thought. <a href="https://en.wikipedia.org/wiki/Akan_names">Learn More</a>
-        </p>
-    </div>
     
     
 </body>
