deleted a styling component in the css file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         
         <div class="navigation">
-            <h1>Akan Names</h1>
+            <h1 id="akan">Akan Names</h1>
             <ul>
                 <li>
                     <a href="#home">Home</a>
