Linked the two html files to js

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             <br>
             <img class="image" src="">
         </p>
-        <script></script>
+        <script src="index.js"></script>
 </body>
 </html>
