Modified the html and js file

--- a/form.html
+++ b/form.html
@@ -8,11 +8,9 @@
 </head>
 <body>
     <h2>Akan Name Generator</h2>
-    <p class="eName">Enter your Name</p> 
-        <input type="text" id="akName">
     <p class="dBirth">Date of Birth</p>
          <input type="date" id="dTe">
-    <p class="genderBox">Select your gender</p>
+    <p class="genderBox">Gender</p>
     <div class="gSelection">
         <div>
             <label>
@@ -28,7 +26,7 @@
             <p>Find your Name</p>
         </div>
         <p id="display"></p>
-        
+
 <script src="index.js"></script> 
 </body>
 </html>
