Deleted 5 files, and modied the html and css file

--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <title>Your Akan Name</title>
 </head>
 <body>
-    <h2>Akan Name Generator</h2>
+    <h2 class="aName">Akan Name Generator</h2>
     <p class="dBirth">Date of Birth</p>
          <input type="date" id="dTe">
     <p class="genderBox">Gender</p>
@@ -27,6 +27,7 @@
             <p>Find your Name</p>
         </div>
         <p id="display"></p>
+        
 
 <script src="index.js"></script> 
 </body>
