--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             The Akan personal name system and practice is a marker of people's belief,
             ideology, religion, culture, philosophy and thought. <a href="https://en.wikipedia.org/wiki/Akan_names" target="_blank">Learn More</a>
             <br>
-            <img class="image" src="">
+            <img class="image" src=""
         </p>
         <script src="index.js"></script>
 </body>
