deleted image files and modified the css file

--- a/form.html
+++ b/form.html
@@ -13,12 +13,12 @@
          <input type="date" id="dTe">
     <p class="genderBox">Gender</p>
     <div class="gSelection">
-        <form>
+        <form id="formSelectors">
             <label>
-                <input type="radio" id="fRadio" value="Female">Female
+                <input type="radio" id="fRadio" value="Female" name="genderRadio">Female
             </label>
             <label>
-                <input type="radio" id="mRadio" value="Male">Male
+                <input type="radio" id="mRadio" value="Male" name="genderRadio">Male
             </label>
         </form>
     </div>
